<resources>
    <string name="app_name">Jogo da Velha</string>
    <string name="action_settings">Settings</string>
    <string name="jogador_1">Jogador 1 |%1$s|</string>
    <string name="jogador_2">Jogador 2 |%1$s|</string>
    <string name="placar_j1">0</string>
    <string name="placar_j2">0</string>
    <string name="parabens">Parabéns, você ganhou!!!</string>
    <string name="velha">Deu Velha!!!</string>
    <string name="resetar">Resetar o placar</string>
    <string name="inicio">Voltar á tela inicial</string>
    <string name="preferencias">Preferências</string>
    <string name="simb_jog1">Símbolo do Jogador 1</string>
    <string name="simb_jog2">Símbolo do Jogador 2</string>
    <string name="num_jogadas">Número de Rodadas</string>
    <string name="summary_jog1">Escolha o símbolo do Jogador 1</string>
    <string name="summary_jog2">Escolha o símbolo do Jogador 2</string>
    <string name="rodadas">Rodadas</string>
    <string name="tela_inicio">Bem-vindo ao Jogo da Velha</string>
    <string name="botao_iniciar">Iniciar</string>
    <string name="nome_velha">Velha</string>
    <string name="placar_velha">0</string>
    <string name="nome_rodadas">Rodadas</string>
    <string name="qtd_rodadas">0</string>


    <string name="alerta">Deseja resetar o jogo?</string>






</resources>